Fix CSS issues on smaller screens

--- a/src/pages/components/countriest-list/CountriesList.module.scss
+++ b/src/pages/components/countriest-list/CountriesList.module.scss
@@ -9,6 +9,8 @@
 
 @media (max-width: 630px) {
   .countries {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    place-content: unset;
     gap: 1rem;
     padding: 1rem;
   }
